@@ -35,6 +35,12 @@ equations.
 * List.thy: use various operations from the Haskell prelude when
 generating Haskell code.
 
+* code_simp.ML: simplification with rules determined by
+code generator.
+
+* code generator: do not print function definitions for case
+combinators any longer.
+
 
 
 New in Isabelle2009-2 (June 2010)
